http://bugs.sakaiproject.org/jira/browse/SAK-13898 Static code review fixes, performance
git-svn-id: https://source.sakaiproject.org/svn/entitybroker/trunk@55781 66ffb92e-73f9-0310-93c1-f5514f145a0a